Fix height of .navbar
* Black bar appears underneath .logo due to .navbar's `min-height` stretching to 51px, seemingly caused by #541

--- a/style/pi-hole.css
+++ b/style/pi-hole.css
@@ -4,6 +4,7 @@
 *
 *  This file is copyright under the latest version of the EUPL.
 *  Please see LICENSE file for your rights under this license. */
+
 .small-box {
 	-webkit-user-select: none; /* Chrome/Safari */        
 	-moz-user-select: none; /* Firefox */
@@ -40,6 +41,6 @@ a.lookatme {
 #all-queries tbody {
 	word-wrap: break-word;
 }
-.main-header .logo {
-  height: 51px;
+.main-header>.navbar {
+  height: 50px;
 }
